editors/tree-sitter/grammar.js
    source_file: ($) => repeat($._item),

    // ----- items ---------------------------------------------------------

    _item: ($) =>
      choice(
        $.import_declaration,
        $.namespace_declaration,
        $.function_definition,
        $.constant_declaration,
        $.struct_declaration,
        $.class_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.construct_declaration,
        $.family_conformance_declaration,
        $.extend_declaration,
        $.type_alias_declaration,
        $.distinct_declaration,
        $.package_declaration,
        $.macro_declaration,
        $.comptime_macro_declaration,
        $.comptime_function_declaration,
        $.macro_invocation,
      ),

    // `let Name[: T] = value` at module scope: one value computed once for
    // the program. There is no module-scope `var`.
    function_definition: ($) =>
      prec.right(
        seq(
          repeat($.attribute),
          optional('async'),
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.type_parameters)),
          field('parameters', $.parameters),
          optional(field('return_type', $.return_type)),
          optional(field('body', $.block)),
        ),
      ),

    parameters: ($) =>
      seq(
        '(',
        optional(
          seq(
            optional(seq($.self_parameter, optional(','))),
            commaSepTrailing($.parameter),
          ),
        ),
        ')',
      ),

    // A method's receiver: `borrow self` or `borrow mut self`. A bare `self` is
    // KPAR075, so it parses here and is refused in the compiler.
    _type: ($) =>
      choice(
        $.array_type,
        $.function_type,
        $.existential_type,
        $.generic_type,
        $._type_path,
      ),

    // `some Widget` / `Any Widget`: a value of some declaration backing the
    // family. Bare `Any` is the top type and stays an ordinary type name.
    block: ($) =>
      prec.dynamic(
        1,
        prec(1, seq('{', repeat($._statement), '}')),
      ),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.match_statement,
        $.attempt_statement,
        $.expression_statement,
      ),

    variable_declaration: ($) =>
      seq(
        choice('let', 'var'),
        field('name', $.identifier),
        optional(
          seq(
            ':',
            optional(field('ownership', $.ownership_modifier)),
            field('type', $._type),
          ),
        ),
        '=',
        field('value', $._expression),
      ),

    // The target is written with expression syntax (`p`, `p.x`, `xs[i]`);
    // whether it names a place is a question for semantics.
    expression_statement: ($) => prec(-1, $._expression),

    // ----- expressions ---------------------------------------------------

    _expression: ($) =>
      choice(
        $.conditional_expression,
        $.binary_expression,
        $.type_test_expression,
        $.type_cast_expression,
        $.unary_expression,
        $.ownership_expression,
        $.try_expression,
        $.call_expression,
        $.method_call_expression,
        $.main_thread_operation,
        $.construction_expression,
        $.trailing_closure_expression,
        $.macro_invocation,
        $.quote_block,
        $.field_expression,
        $.index_expression,
        $.closure_expression,
        $.parenthesized_expression,
        $.array_literal,
        $.dot_member_expression,
        $._value_name,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
      ),

    // `move` and `copy` are contextual: each is an operator only when an
    // operand follows, and an ordinary name everywhere else.
    identifier: (_$) => /[A-Za-z_][A-Za-z0-9_]*/,

    integer_literal: (_$) => token(choice(/0[xX][0-9a-fA-F]+/, /[0-9]+/)),

    // Digits DOT digits, both sides required: `1.` is an integer plus a stray
    // dot, and `1e5` is an integer plus the identifier `e5`.
    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($._string_content, $.escape_sequence)),
        token.immediate('"'),
      ),

    _string_content: (_$) => token.immediate(prec(1, /[^"\\\n]+/)),

    // Exactly the escapes the lexer decodes: `\n \t \r \e \0 \" \\` and a
    // backslash before a newline (line continuation). Anything else is
    // KLEX003, so it stays out of the literal here and must ERROR.
